# langchain-lecture

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: README db.md  lumon_data.txt
src/clase 1/: 1_helloWorld.ipynb  2_messages_chatModels.ipynb  3_memory.ipynb  4_promptTemplate.ipynb  5_outputParser.ipynb  6_tools.ipynb  7_demo_facil_summarizer.ipynb  8_demo_media.ipynb  9_demo_dificil.ipynb  utils.py
src/clase 2/: 1_cot.ipynb  2_tot.ipynb  3_ReAct.ipynb  4_RAG_agent.ipynb  5_agente_SQL.ipynb  6_multiagent_pattern.ipynb  7_hierarchical_agent_teams.ipynb
src/mcp_intro/: main.py  math_server.py  weather_server.py
src/streamlit_demo/: crewai_app.py  langchain_app.py  research_report.md
